--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -208,11 +208,11 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
         <ul class="cssmenu">
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/国内/kind/国内">国内团队 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/日本">境外团队（日本） </a> </li>
-          <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/台湾">境外团队（台湾） </a> </li>
         </ul>
       </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/shenhe">产品审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">单项服务及补账</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Dijie/tongji">地接产品统计</a> </li>
     </ul>
     </span> 
     
