--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -111,12 +111,20 @@ return '指定销售没有添加，将不会门市销售！！！';
           <td colspan="6"><table cellpadding="0" cellspacing="0" width="100%">
               <tbody>
                 <tr>
-                  <td nowrap="nowrap"><strong>对外统一显示价格:</strong>&nbsp;&nbsp;&nbsp;
-                    <input type="text" id="xianlushoujia" value="<{$chanpin['shoujia']}>" >
-                    &nbsp;&nbsp;&nbsp; <strong>儿童及其他说明:</strong>&nbsp;&nbsp;&nbsp;
+                  <td nowrap="nowrap"><strong>电商（成人）价格:</strong>&nbsp;&nbsp;&nbsp;
+                    <input type="text" id="shoujia" value="<{$chanpin['shoujia']}>" >（统一对外销售价）
+                </tr>
+                <tr>
+                  <td nowrap="nowrap"><strong>电商（儿童）价格:</strong>&nbsp;&nbsp;&nbsp;
+                    <input type="text" id="ertongshoujia" value="<{$chanpin['ertongshoujia']}>" >
+                </tr>
+                <tr>
+                  <td nowrap="nowrap"><strong>儿童及其他说明（电商可不填）:</strong>&nbsp;&nbsp;&nbsp;
                     <input style="width:400px;" type="text" id="xianluremark" value="<{$chanpin['remark']}>"  >
-                    &nbsp;&nbsp;&nbsp;
-                    <input style="margin-top:-2px;" class="button" type="button" value="保存" onclick="saveshoujia()"/></td>
+                </tr>
+                <tr>
+                  <td nowrap="nowrap">
+                    <input style="margin-top:-2px;" class="button" type="button" value=" 保存 " onclick="saveshoujia()"/></td>
                 </tr>
               </tbody>
             </table></td>
@@ -125,12 +133,13 @@ return '指定销售没有添加，将不会门市销售！！！';
     <script>
 		 function saveshoujia()
 		 {
-			var shoujia = jQuery("#xianlushoujia").val();
+			var shoujia = jQuery("#shoujia").val();
+			var ertongshoujia = jQuery("#ertongshoujia").val();
 			var remark = jQuery("#xianluremark").val();
 			jQuery.ajax({
 				type:	"POST",
 				url:	SITE_INDEX+"Chanpin/dopostfabu_shoujia/chanpinID/"+chanpinID,
-				data:	"shoujia="+shoujia+"&remark="+remark,
+				data:	"shoujia="+shoujia+"&ertongshoujia="+ertongshoujia+"&remark="+remark,
 				success:function(msg){
 					ThinkAjax.myAjaxResponse(msg,'resultdiv');
 				}
