--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -147,7 +147,7 @@ return '指定销售没有添加，将不会门市销售！！！';
 			
 		 }
 		  </script>
-    <table cellpadding="0" cellspacing="0" width="100%" class="list view" id="shoujia">
+    <table cellpadding="0" cellspacing="0" width="100%" class="list view" id="xiaoshoulist">
       <tbody>
         <tr class="pagination">
           <td colspan="11"><table cellpadding="0" cellspacing="0" width="100%" class="paginationTable">
