--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -231,7 +231,7 @@
               <td width="120" align="center"></td>
               <td width="70" align="center"><{$value_i}> </td>
               <td width="50" align="center"></td>
-              <td width="50" align="center"><{$renshu_i}> </td>
+              <td width="50" align="center"></td>
               <td width="170"  align="center"></td>
             </tr>
           </table></td>
@@ -274,7 +274,7 @@
               <td width="120" align="center"></td>
               <td width="70" align="center"><{$value_j}> </td>
               <td width="50" align="center"></td>
-              <td width="50" align="center"><{$renshu_j}> </td>
+              <td width="50" align="center"></td>
               <td width="170"  align="center"></td>
             </tr>
           </table></td>
