Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -4,6 +4,7 @@
 <script>
 
 function onshop(){
+	ThinkAjax.myloading('resultdiv');
 	var checkboxitem = new Array();
 	var i = 0;
 	jQuery(".checkboxitem").each(function(index, element) {
