--- a/Myerp/Tpl/SetSystem/shenheIndex.html
+++ b/Myerp/Tpl/SetSystem/shenheIndex.html
@@ -31,6 +31,8 @@
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/ACLRoles.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/shenhe/datatype/地接">地接</a></td>
           <td width="30%">地接</td>
+          <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/ACLRoles.gif">&nbsp;<a href="<{:SITE_INDEX}>SetSystem/shenhe/datatype/签证">签证</a></td>
+          <td width="30%">签证</td>
         </tr>
       </tbody>
     </table>
