Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -231,6 +231,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
         <ul class="cssmenu">
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/国内/kind/国内">国内团队 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/日本">境外团队（日本） </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/韩国">境外团队（韩国） </a> </li>
         </ul>
       </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/shenhe">产品审核</a> </li>
