--- a/Myerp/Tpl/Chanpin/chengbenshoujia.html
+++ b/Myerp/Tpl/Chanpin/chengbenshoujia.html
@@ -111,16 +111,19 @@ return '指定销售没有添加，将不会门市销售！！！';
           <td colspan="6"><table cellpadding="0" cellspacing="0" width="100%">
               <tbody>
                 <tr>
+                  <td nowrap="nowrap"><strong style="color:#000">如需更新网店价格，需重新审核线路。<span id="chengbenjisuan"></span></strong></td>
+                </tr>
+                <tr>
                   <td nowrap="nowrap"><strong>电商（成人）价格:</strong>&nbsp;&nbsp;&nbsp;
-                    <input type="text" id="shoujia" value="<{$chanpin['shoujia']}>" >（统一对外销售价）
+                    <input type="text" id="shoujia" value="<{$chanpin['shoujia']}>" >（电商销售成人价）</td>
                 </tr>
                 <tr>
                   <td nowrap="nowrap"><strong>电商（儿童）价格:</strong>&nbsp;&nbsp;&nbsp;
-                    <input type="text" id="ertongshoujia" value="<{$chanpin['ertongshoujia']}>" >
+                    <input type="text" id="ertongshoujia" value="<{$chanpin['ertongshoujia']}>" >（电商销售儿童价）</td>
                 </tr>
                 <tr>
                   <td nowrap="nowrap"><strong>儿童及其他说明（电商可不填）:</strong>&nbsp;&nbsp;&nbsp;
-                    <input style="width:400px;" type="text" id="xianluremark" value="<{$chanpin['remark']}>"  >
+                    <input style="width:400px;" type="text" id="xianluremark" value="<{$chanpin['remark']}>"  ></td>
                 </tr>
                 <tr>
                   <td nowrap="nowrap">
