--- a/Myerp/Tpl/Qianzheng/index.html
+++ b/Myerp/Tpl/Qianzheng/index.html
@@ -19,7 +19,7 @@ function onshop(){
 	}
 	jQuery.ajax({
 		type:	"POST",
-		url:	"<{:SITE_INDEX}>Client/onshop",
+		url:	"<{:SITE_INDEX}>Client/onshop/chanpintype/签证",
 		data:	"checkboxitem="+checkboxitem,
 		success:function(msg){
 			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
