--- a/Myerp/Tpl/Chanpin/baoming.html
+++ b/Myerp/Tpl/Chanpin/baoming.html
@@ -137,7 +137,7 @@ function ajaxalert(title){
             <div id="resultdiv_2" class="resultdiv"></div>
     <form name="form1" method="post" id="form1" >
       <input type="hidden" name="title" value="<{$xianlu['xianlu']['title']}>/<{$zituan['chutuanriqi']}>" />
-      <input type="hidden" name="zituanID" value="<{$chanpinID}>" />
+      <input type="hidden" name="parentID" value="<{$chanpinID}>" />
       <input type="hidden" name="shoujiaID" value="-1" />
       <input type="hidden" name="backdoor" value="1" />
       <table width="100%" class="tb1" cellpadding="0" cellspacing="0">
