--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -125,8 +125,8 @@ jQuery(".timeNews").hover(function(){
 
 
 jQuery(document).ready(function(){
-		getNews();
-		window.setInterval(getNews,20000);
+//		getNews();
+//		window.setInterval(getNews,20000);
 	
 });
 
