Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -107,21 +107,21 @@ em,i{ font-style:normal;}
   <div id="timeNews" class="timeNews"></div>
 </div>
 <script>
-jQuery(".noticebox").float({
-					   position:"rm",
-					   offset : {right : -633},
-					   style:{width:660}
-					  });
-jQuery(".newsTitle").hover(function(){
-	jQuery(".newsTitle").hide();
-	jQuery(".noticebox").float("clearOffset","fast");
-})
-
-jQuery(".timeNews").hover(function(){
-},function(){
-	jQuery(".newsTitle").show();
-	jQuery(".noticebox").float("addOffset");
-})
+//jQuery(".noticebox").float({
+//					   position:"rm",
+//					   offset : {right : -633},
+//					   style:{width:660}
+//					  });
+//jQuery(".newsTitle").hover(function(){
+//	jQuery(".newsTitle").hide();
+//	jQuery(".noticebox").float("clearOffset","fast");
+//})
+//
+//jQuery(".timeNews").hover(function(){
+//},function(){
+//	jQuery(".newsTitle").show();
+//	jQuery(".noticebox").float("addOffset");
+//})
 
 
 jQuery(document).ready(function(){
