Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -216,6 +216,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
     <ul>
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/公告">公告</a> </li>
       <li> <a href="<{:SITE_INDEX}>Message/index/datatype/排团表">排团表</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Message/infohistory/datatype/消息/datatype/订单">电商订单管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>Message/infohistory">系统提示</a> </li>
     </ul>
     </span> <span id="moduleLink_5" 
