--- a/Myerp/Tpl/Xiaoshou/dingdanlist_web.html
+++ b/Myerp/Tpl/Xiaoshou/dingdanlist_web.html
@@ -61,6 +61,7 @@
                 
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 订单编号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 联系电话 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 产品 </div></th>
@@ -75,6 +76,7 @@
                 <php> $i = -1; foreach($chanpin_list as $v){ $i++;</php>
                 <tr style="cursor:pointer" height="40" class="evenListRowS1" onclick="showinfo(<{$v['chanpinID']}>)">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
+                  <td scope="row" align="left" valign="top"><{$v['orderID']}></td>
                   <td scope="row" align="left" valign="top"><{$v['lianxiren']}></td>
                   <td scope="row" align="left" valign="top"><{$v['telnum']}></td>
                   <td scope="row" align="left" valign="top"><{$v['title']}></td>
